Set up background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
 
+    <!-- <img src="images/background.jpg" alt="Background"> -->
+    <div class="wrapper">
 
+    </div>
     
 </body>
 
