Made left side (image) and paragraphs on the right

--- a/index.html
+++ b/index.html
@@ -9,10 +9,27 @@
 </head>
 
 <body>
-
-    <!-- <img src="images/background.jpg" alt="Background"> -->
+    <div class="image">
+        <img src="images/background-2.jpg" alt="Background">
+        <div>    
+            <h2>Northas</h2>
+        </div> 
+    </div>
     <div class="wrapper">
+        <div class="paragraphs">
+            <p>
+                This is not a real online service! You know you need something like this in
+                your life to help you realize your deepest dreams. Sign up know to get started!
+            </p>
+            <p>You <i>know</i>  you want to.</p>
+        </div>
 
+        <div class="form-container">
+            <h3>Let`s do this!</h3>
+            <form action="#">
+                
+            </form>
+        </div>
     </div>
     
 </body>
