Fixed image size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="image">
-        <img src="images/background-2.jpg" alt="Background">
+        <img src="images/background.jpg" alt="Background">
         <div>    
             <h2>Northas</h2>
         </div> 
